地理位置调整  只有在主线程 创建和发起请求才有效
个人资料界面  完善

发布界面完善

--- a/MoShang/Info.plist
+++ b/MoShang/Info.plist
@@ -32,9 +32,11 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
-	<key>com.apple.coretelephony.Identity.get</key>
-	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
+	<true/>
+	<key>NSLocationUsageDescription</key>
+	<string>打开地理位置信息</string>
+	<key>NSLocationAlwaysUsageDescription</key>
 	<true/>
 </dict>
 </plist>
